--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,12 +4,13 @@ name: Build and upload to PyPI
 on: [push, pull_request]
 
 jobs:
+        
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-20.04, windows-2019, macos-12]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -19,16 +20,9 @@ jobs:
         with:
             python-version: '3.x'
        
-      #- name: Set up QEMU
-      #  if: matrix.os == 'ubuntu-20.04'
-      #  uses: docker/setup-qemu-action@v2
-
-      - name: Install delocate
-        run: pip install delocate
-
-      - name: Check PATH
-        run: echo $PATH
-  
+      - name: Set up QEMU
+        if: matrix.os == 'ubuntu-20.04'
+        uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
         uses: pypa/cibuildwheel@v2.16.5
@@ -62,3 +56,5 @@ jobs:
         with:
           name: package
           path: dist/        
+
+
