--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
 manylinux-x86_64-image = "manylinux2014"
+manylinux-aarch64-image = "manylinux2014"
 
 skip = ["pp*", "*-win32", "*-manylinux_i686", "*cp36*", "*cp37*", "*-musllinux_*", "cp38-macosx_x86_64", "cp39-macosx_x86_64", "cp310-macosx_x86_64", "cp311-macosx_x86_64", "cp312-macosx_x86_64"]
 
@@ -13,4 +14,7 @@ skip = ["pp*", "*-win32", "*-manylinux_i686", "*cp36*", "*cp37*", "*-musllinux_*
 archs = ["AMD64"]
 
 [tool.cibuildwheel.linux]
-archs = ["x86_64"]
+archs = ["x86_64", "aarch64"]
+
+[tool.cibuildwheel.macos]
+archs = ["universal2"]
