--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,9 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
-        uses: pypa/cibuildwheel@v2.16.5
+        run: |
+          python -m pip install cibuildwheel==2.16.5
+          python -m cibuildwheel --output-dir wheelhouse --no-build-isolation --no-repair
        
 
       
