--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,46 +1,46 @@
+
 name: Build and upload to PyPI
 
 on: [push, pull_request]
 
 jobs:
+        
   build_wheels:
-    name: Build wheels on ${ matrix.os }
-    runs-on: ${ matrix.os }
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        # os: [ubuntu-20.04]
+#         os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-
+            python-version: '3.x'
+       
       - name: Set up QEMU
-        if: matrix.os == 'ubuntu-20.04'
+        if: matrix.os == 'ubuntu-latest'
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
-        run: |
-          python -m pip install cibuildwheel==2.16.5
-          python -m cibuildwheel --output-dir wheelhouse --no-build-isolation --no-repair
-        env:
-          CIBW_BUILD: cp3?-*
-          CIBW_ARCHS: x86_64
+ 
+        uses: pypa/cibuildwheel@v2.16.5
+       
 
-      # - name: Run test.py in develop mode
-      #   run: |
-      #     python setup_setuptools.py develop
-      #     python -m pip install opencv-python
-      #     python --version
-      #     python test.py
+      
+      
+#      - name: Run test.py in develop mode
+#        run: |
+#          python setup_setuptools.py develop
+#           python -m pip install opencv-python
+#           python --version
+#           python test.py
       - name: Publish package
         uses: actions/upload-artifact@v2
         with:
-          name: package
-          path: ./wheelhouse/
-
+           name: package
+           path: ./wheelhouse/
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
@@ -50,8 +50,11 @@ jobs:
       - name: Build sdist
         run: pipx run build --sdist
 
+
       - name: Publish package
         uses: actions/upload-artifact@v2
         with:
           name: package
-          path: dist/
+          path: dist/        
+
+
