--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,13 @@ archs = ["AMD64"]
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64", "aarch64"]
+repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
 archs = ["universal2"]
+
+repair-wheel-command = [
+  "delocate-listdeps {wheel}",
+  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
+]
+
