--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-latest]
+        os: [ubuntu-20.04, windows-2019, macos-12]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -25,7 +25,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
-        uses: pypa/cibuildwheel@v2.20.0
+        uses: pypa/cibuildwheel@v2.16.5
        
 
       
