--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019]
+        os: [ubuntu-latest, windows-2019]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -21,7 +21,7 @@ jobs:
             python-version: '3.x'
        
       - name: Set up QEMU
-        if: matrix.os == 'ubuntu-20.04'
+        if: matrix.os == 'ubuntu-latest'
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
