--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,10 +36,10 @@ jobs:
 #           python -m pip install opencv-python
 #           python --version
 #           python test.py
-      - name: Publish package
+      - name: Publish wheel
         uses: actions/upload-artifact@v4
         with:
-           name: package
+           name: wheel
            path: ./wheelhouse/
   build_sdist:
     name: Build source distribution
