--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019]
+        os: [ubuntu-20.04]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -21,7 +21,7 @@ jobs:
             python-version: '3.x'
        
       - name: Set up QEMU
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-20.04'
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
@@ -41,20 +41,6 @@ jobs:
         with:
            name: wheel
            path: ./wheelhouse/
-  build_sdist:
-    name: Build source distribution
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build sdist
-        run: pipx run build --sdist
-
-
-      - name: Publish package
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: dist/        
+  
 
 
