--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Publish wheel
         uses: actions/upload-artifact@v4
         with:
-           name: wheel
+           name: wheel_${{ matrix.os }}
            path: ./wheelhouse/
   build_sdist:
      name: Build source distribution
@@ -52,7 +52,7 @@ jobs:
 
 
        - name: Publish package
-         uses: actions/upload-artifact@v2
+         uses: actions/upload-artifact@v4
          with:
            name: package
            path: dist/        
