--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019]
+        os: [ubuntu-20.04]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -23,9 +23,13 @@ jobs:
       - name: Set up QEMU
         if: matrix.os == 'ubuntu-20.04'
         uses: docker/setup-qemu-action@v2
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.21.1
+
       - name: Build wheels
  
-        uses: pypa/cibuildwheel@v2.16.5
+        run: python -m cibuildwheel --output-dir wheelhouse
+
        
 
       
