--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ skip = ["pp*", "*-win32", "*-manylinux_i686", "*cp36*", "*cp37*", "*-musllinux_*
 archs = ["AMD64"]
 
 [tool.cibuildwheel.linux]
-archs = ["x86_64"]
+archs = ["aarch64"]
 repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
