--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,18 +22,14 @@ jobs:
        
       - name: Set up QEMU
         if: matrix.os == 'ubuntu-20.04'
-        uses: docker/setup-qemu-action@v2
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.21.1
-
+        uses: docker/quay.io/pypa/manylinux2014_aarch64
       - name: Build wheels
  
-        run: python -m cibuildwheel --output-dir wheelhouse
+        uses: pypa/cibuildwheel@v2.16.5
 
        
 
-      
-      
+           
 #      - name: Run test.py in develop mode
 #        run: |
 #          python setup_setuptools.py develop
@@ -61,5 +57,4 @@ jobs:
            name: package
            path: dist/        
   
-
 
