--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
+        os: [ubuntu-latest]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -21,8 +21,8 @@ jobs:
             python-version: '3.x'
        
       - name: Set up QEMU
-        if: matrix.os == 'ubuntu-20.04'
-        uses: docker/quay.io/pypa/manylinux2014_aarch64
+        if: matrix.os == 'ubuntu-latest'
+        uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
         uses: pypa/cibuildwheel@v2.16.5
