--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-12]
 #         os: [ubuntu-20.04]
 
     steps:
@@ -25,11 +25,11 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Build wheels
  
-        uses: pypa/cibuildwheel@v2.17.0
-
+        uses: pypa/cibuildwheel@v2.16.5
        
 
-           
+ 
+        
 #      - name: Run test.py in develop mode
 #        run: |
 #          python setup_setuptools.py develop
