--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ skip = ["pp*", "*-win32", "*-manylinux_i686", "*cp36*", "*cp37*", "*-musllinux_*
 archs = ["AMD64"]
 
 [tool.cibuildwheel.linux]
-archs = ["aarch64"]
+archs = ["x86_64", "aarch64"]
 repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
@@ -22,5 +22,5 @@ archs = ["universal2"]
 
 repair-wheel-command = [
   "delocate-listdeps {wheel}",
-  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
+  "delocate-wheel --require-archs {delocate_archs} -w --lib-sdir . -w {dest_dir} {wheel}",
 ]
