--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,5 @@ archs = ["universal2"]
 
 repair-wheel-command = [
   "delocate-listdeps {wheel}",
-  "delocate-wheel --require-archs {delocate_archs} -w --lib-sdir . -w {dest_dir} {wheel}",
+  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
 ]
